// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders a brand appearance 1`] = `
<div
  aria-labelledby="divider-r4"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r4"
  >
    Brand
  </div>
</div>
`;

exports[`Divider renders a default divider 1`] = `
<div
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
/>
`;

exports[`Divider renders a divider with a different color 1`] = `
<div
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
/>
`;

exports[`Divider renders a divider with content 1`] = `
<div
  aria-labelledby="divider-r1"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r1"
  >
    Default Divider
  </div>
</div>
`;

exports[`Divider renders a divider with inset 1`] = `
<div
  aria-labelledby="divider-r2"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r2"
  >
    Inset
  </div>
</div>
`;

exports[`Divider renders a horizontal divider with a fixed width 1`] = `
<div
  aria-labelledby="divider-rd"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
  style={
    Object {
      "width": 100,
    }
  }
>
  <div
    className="fui-Divider__wrapper"
    id="divider-rd"
  >
    fixed 100px width
  </div>
</div>
`;

exports[`Divider renders a strong appearance 1`] = `
<div
  aria-labelledby="divider-r5"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r5"
  >
    Strong
  </div>
</div>
`;

exports[`Divider renders a subtle appearance 1`] = `
<div
  aria-labelledby="divider-r3"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r3"
  >
    Subtle
  </div>
</div>
`;

exports[`Divider renders a vertical divider 1`] = `
<div
  aria-orientation="vertical"
  className="fui-Divider"
  role="separator"
/>
`;

exports[`Divider renders a vertical divider with a fixed height 1`] = `
<div
  aria-labelledby="divider-rc"
  aria-orientation="vertical"
  className="fui-Divider"
  role="separator"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div
    className="fui-Divider__wrapper"
    id="divider-rc"
  >
    fixed 100px height
  </div>
</div>
`;

exports[`Divider renders a vertical divider with content 1`] = `
<div
  aria-labelledby="divider-rb"
  aria-orientation="vertical"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-rb"
  >
    Vertical
  </div>
</div>
`;

exports[`Divider renders content center aligned 1`] = `
<div
  aria-labelledby="divider-r7"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r7"
  >
    Center
  </div>
</div>
`;

exports[`Divider renders content end aligned 1`] = `
<div
  aria-labelledby="divider-r8"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r8"
  >
    End
  </div>
</div>
`;

exports[`Divider renders content start aligned 1`] = `
<div
  aria-labelledby="divider-r6"
  aria-orientation="horizontal"
  className="fui-Divider"
  role="separator"
>
  <div
    className="fui-Divider__wrapper"
    id="divider-r6"
  >
    Start
  </div>
</div>
`;
